<resources>
    <string name="app_name">CALCULATOR</string>
    <string name="super_script">X<sup>n</sup></string>
    <string name="display">Enter The Value</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="parenbutton">( )</string>
    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="decimal">.</string>
    <string name="back_space"></string>



</resources>